--- a/Foundation/index.html
+++ b/Foundation/index.html
@@ -3,9 +3,11 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-        <title>Blog Foundation</title>
+        <meta name="keywords" content="HTML, CSS, XML, XHTML, JavaScript">
+        <meta name="author" content="Alexis Nicolas Benzoni">
         <link rel="stylesheet" href="css/foundation.min.css">
         <link rel="stylesheet" href="css/app.css">
+        <title>Blog Foundation</title>
     </head>
     <body>
     
