--- a/Materialize/index.html
+++ b/Materialize/index.html
@@ -3,10 +3,12 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-        <title>Blog Materialize</title>
+        <meta name="keywords" content="HTML, CSS, XML, XHTML, JavaScript">
+        <meta name="author" content="Alexis Nicolas Benzoni">
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
         <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
         <link type="text/css" rel="stylesheet" href="css/estilos.css">
+        <title>Blog Materialize</title>
     </head>
     <body>
     
