--- a/Bootstrap/index.html
+++ b/Bootstrap/index.html
@@ -53,6 +53,10 @@
                            <h1 class="media-heading">Soda Stereo</h1>
                            <p>Soda Stereo fue una banda de rock argentina, formada en Buenos Aires en el año 1982 por Gustavo Cerati (voz, guitarra), Héctor «Zeta» Bosio (bajo) y Carlos Alberto Ficicchia «Charly Alberti» (batería), considerada una de las más influyentes e importantes bandas iberoamericanas de todos los tiempos y una leyenda de la música latina. La banda tuvo un papel muy importante en el desarrollo y la difusión del rock iberoamericano, rock en español durante las décadas de 1980 y 1990. Fueron el primer grupo de habla hispana en conseguir un éxito masivo en Latinoamérica. Soda Stereo ha encabezado las listas de todos los tiempos en su nativa Argentina, donde se establecieron varios récords de ventas de discos y asistencias a conciertos.</p>
                        </div>
+                       <div class="form-group">
+  <label for="comment">Comment:</label>
+  <textarea class="form-control" rows="5" id="comment"></textarea>
+</div>
                     </div>
                 </div>
                 <div class="media">
@@ -63,6 +67,10 @@
                     <div class="media-right media-middle">
                         <img src="img/logocharly.jpg" class="media-object" style="width:100px">
                     </div>
+                    <div class="form-group">
+  <label for="comment">Comment:</label>
+  <textarea class="form-control" rows="5" id="comment"></textarea>
+</div>
                 </div>
             </section>
             <aside class="col-sm-4">
