--- a/Foundation/index.html
+++ b/Foundation/index.html
@@ -11,7 +11,7 @@
     </head>
     <body>
         <div class="row">
-            <div class="columns small-5"><h1>Blog Gastronomia</h1></div>
+            <div class="columns small-5 medium-5 large-5"><h1>Blog Gastronomia</h1></div>
         </div>
         <div class="row">
             <div class="columns small-5 text-right"><h2>Nuestro Blog Gastronomico</h2></div>
