--- a/Foundation/index.html
+++ b/Foundation/index.html
@@ -10,19 +10,32 @@
         <link rel="stylesheet" href="css/app.css">  
     </head>
     <body>
+        <!--Nombre del Blog-->
+        <div class="row">
+            <div class="column midium-centered large-4">
+                <div class="row">
+                    <div class="columns large-4 srink"><h1>Blog Gastronomico</h1></div>
+                </div>
+                <div class="row">
+                    <div class="columns large-offset-6">Comidas Para Llevar</div>
+                </div>
+            </div>
+        </div>
+<!--        Buscador-->
+        <br>
+        <form>
+            <div class="row">
+                <div class="columns large-4">
+                    <label><input type="text" placeholder="buscador"></label>
+                    <a href="about.html" class="button expanded">Inicio</a>
+                    <a href="about.html" class="button expanded">Plato Preferido</a>
+                    <a href="about.html" class="button expanded">Restorants</a>
+                    <a href="about.html" class="button expanded">Favoritos</a>
+                </div>
+            </div>
+        </form>
         <div class="row">
             <div class="columns small-4 medium-4 large-4">
-                <div class="row">
-                    <div class="columns small-12 medium-12 large-12"><h1>Gastronomia</h1></div>
-                    <div class="columns small-12 medium-12 large-12">Slogan</div>
-                </div>
-                <div class="row">
-                    <div class="columns large-12">Buscador</div>
-                    <div class="columns large-12">Inicio</div>
-                    <div class="columns large-12">Plato Preferido</div>
-                    <div class="columns large-12">Restorants</div>
-                    <div class="columns large-12">Favoritos</div>
-                </div>
                 <div class="row">
                     <div class="columns large-4"><img src="img/plato_1.jpg"></div>
                     <div class="columns large-4"><img src="img/plato_2.jpg"></div>
