--- a/Foundation/index.html
+++ b/Foundation/index.html
@@ -25,11 +25,33 @@
 <br>
         <div class="row">
             <div class="column large-4">
+                <div class="row">
+                    <div class="column large-12">
                 <label><input type="text" placeholder="buscador"></label>
                     <a href="about.html" class="button expanded">Inicio</a>
                     <a href="about.html" class="button expanded">Plato Preferido</a>
                     <a href="about.html" class="button expanded">Restorants</a>
                     <a href="about.html" class="button expanded">Favoritos</a>
+                </div>
+                    </div>
+                <div class="row">
+                    <div class="columns small-12 medium-12 large-12">
+                <div class="row">
+                    <div class="columns large-4"><img src="img/plato_1.jpg"></div>
+                    <div class="columns large-4"><img src="img/plato_2.jpg"></div>
+                    <div class="columns large-4"><img src="img/plato_3.jpg"></div>
+                </div>
+                 <br>       
+                <div class="row">
+                    <div class="columns large-4"><img src="img/plato_1.jpg"></div>
+                    <div class="columns large-4"><img src="img/plato_2.jpg"></div>
+                    <div class="columns large-4"><img src="img/plato_3.jpg"></div>
+                    </div>
+                        <div class="row">
+                            <div class="columns large-12">Historial</div>
+                        </div>
+                    </div>
+                </div>
             </div>
             <div class="column large-8">
                 <div class="row">
